Add WOFF build support.
* configure.ac:
  - Add --enable-woff and --with-woffdir options
    and set $woffdir ver and ENABLE_WOFF condition accordingly.
* scripts/Makefile.am, +scripts/gen-woff.pe:
  - Add fontforge script for generating WOFF.
* fonts/Makefile.am:
  - Add .woff to SUFFIXES
  - Add rule to generate and install .woff from .sfd
  - Add *.woff to CLEANFILES

--- a/configure.ac
+++ b/configure.ac
@@ -47,6 +47,24 @@ fi
 
 AM_CONDITIONAL(ENABLE_OTF,test $enable_otf = "yes")
 
+dnl Enable WOFF
+AC_ARG_ENABLE(woff,
+  [AC_HELP_STRING([--enable-woff],
+                  [enable WOFF generation])],
+                  , enable_woff="no")
+if test "x$enable_woff" = "xyes"; then
+  AC_ARG_WITH(woffdir,
+    [AC_HELP_STRING([--with-woffdir=DIR],
+                    [font directory in DIR [PREFIX/share/fonts/woff/khottabun]])],
+    [woffdir="$withval"], [woffdir=\$\{prefix\}/share/fonts/woff/khottabun])
+  AC_MSG_CHECKING(--with-woffdir)
+  AC_MSG_RESULT("$woffdir")
+
+  AC_SUBST(woffdir)
+fi
+
+AM_CONDITIONAL(ENABLE_WOFF,test $enable_woff = "yes")
+
 # Checks for programs.
 AC_PROG_INSTALL
 AC_PROG_LN_S
