Add initial Viravong font.
Viravong is a contemporary Lao font with Pali-Sanskrit extension,
based on Unicode proposl L2/17-106r by Vinodh Rajan et. al.

https://www.unicode.org/L2/L2017/17106r-lao-for-pali.pdf

The glyphs are imported & normalized from Sanit Phokhaphan's
LaneXang_Mon non-Unicode TrueType font, with Sanit's permission.

* fonts/Makefile.am, +fonts/Viravong.sfd:
  - Add Viravong font.

--- a/fonts/Makefile.am
+++ b/fonts/Makefile.am
@@ -1,4 +1,7 @@
-FONTSOURCES = Khottabun.sfd
+FONTSOURCES = \
+	Khottabun.sfd	\
+	Viravong.sfd	\
+	$(NULL)
 
 TTF_TARGETS = $(FONTSOURCES:.sfd=.ttf)
 OTF_TARGETS = $(FONTSOURCES:.sfd=.otf)
